--- a/style.css
+++ b/style.css
@@ -27,3 +27,40 @@
   h1 {
     margin-bottom: 20px;
   }
+
+  #search {
+    border-radius: 5px 0 0 5px;
+    border: none;
+    padding: 10px;
+    font-size: 16px;
+    width: 70%;
+    height: 42px;
+  }
+  
+  #submit {
+    border-radius: 0 5px 5px 0;
+    padding: 10px;
+    font-size: 16px;
+    width: 5em;
+    cursor: pointer;
+  }
+
+  #weather-wrapper {
+    display: flex;
+  }
+  
+  #weather-search {
+    display: flex;
+  }
+
+  #weather-wrapper {
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    justify-content: space-between;
+  }
+  
+  #weather-search {
+    display: flex;
+    width: 50%;
+  }
